--- a/public/index.html
+++ b/public/index.html
@@ -1,21 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <link
+      href="https://fonts.googleapis.com/css?family=Mansalva|Nunito|Rubik&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="theme-color" content="#000000" />
+    <meta name="description" />
+    <link rel="apple-touch-icon" href="logo192.png" />
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link
+      href="https://api.tiles.mapbox.com/mapbox-gl-js/v1.15.2/mapbox-gl.css"
+      rel="stylesheet"
+    />
+    <title>Experiment</title>
+  </head>
 
-<head>
-  <meta charset="utf-8" />
-  <link href="https://fonts.googleapis.com/css?family=Mansalva|Nunito|Rubik&display=swap" rel="stylesheet">
-  <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="theme-color" content="#000000" />
-  <meta name="description" content="Web site created using create-react-app" />
-  <link rel="apple-touch-icon" href="logo192.png" />
-  <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-  <link href='https://api.tiles.mapbox.com/mapbox-gl-js/v1.15.2/mapbox-gl.css' rel='stylesheet' />
-  <title>React App</title>
-</head>
-
-<body>
-  <div id="root"></div>
-</body>
-
+  <body>
+    <div id="root"></div>
+  </body>
 </html>
