--- a/public/index.html
+++ b/public/index.html
@@ -1,25 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <link
-      href="https://fonts.googleapis.com/css?family=Mansalva|Nunito|Rubik&display=swap"
-      rel="stylesheet"
-    />
-    <link rel="shortcut icon" href="%PUBLIC_URL%/circle.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta name="description" />
-    <link rel="apple-touch-icon" href="logo192.png" />
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <link
-      href="https://api.tiles.mapbox.com/mapbox-gl-js/v1.15.2/mapbox-gl.css"
-      rel="stylesheet"
-    />
-    <title>Experiment</title>
-  </head>
 
-  <body>
-    <div id="root"></div>
-  </body>
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="minimum-scale=1, initial-scale=1, width=device-width, shrink-to-fit=no" />
+  <link href="https://fonts.googleapis.com/css?family=Mansalva|Nunito|Rubik&display=swap" rel="stylesheet" />
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />
+  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
+  <link rel="shortcut icon" href="%PUBLIC_URL%/circle.ico" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="theme-color" content="#000000" />
+  <meta name="description" />
+  <link rel="apple-touch-icon" href="logo192.png" />
+  <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+  <link href="https://api.tiles.mapbox.com/mapbox-gl-js/v1.15.2/mapbox-gl.css" rel="stylesheet" />
+  <title>Experiment</title>
+</head>
+
+<body>
+  <div id="root"></div>
+</body>
+
 </html>
