--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
   <link rel="apple-touch-icon" href="logo192.png" />
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
   <link href="https://api.tiles.mapbox.com/mapbox-gl-js/v1.15.2/mapbox-gl.css" rel="stylesheet" />
-  <title>Unconstrained experiment</title>
+  <title>Map experiment</title>
 </head>
 
 <body>
