--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
   <link href="https://fonts.googleapis.com/css?family=Mansalva|Nunito|Rubik&display=swap" rel="stylesheet" />
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
-  <link rel="shortcut icon" href="%PUBLIC_URL%/circle.ico" />
+  <link rel="shortcut icon" href="%PUBLIC_URL%/map_icon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
   <meta name="description" />
